--- a/Coffee_Shop_Data_Analysis.ipynb
+++ b/Coffee_Shop_Data_Analysis.ipynb
@@ -4,11 +4,6 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "collapsed_sections": [
-        "YHWF05UUwUpM",
-        "r2CtE_9Ezd-D",
-        "D1V4O-OV02mI"
-      ],
       "authorship_tag": "ABX9TyOfuojFdyb835CYSl+/aM9W",
       "include_colab_link": true
     },
@@ -434,13 +429,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "LO2XUHFq4dfB",
         "outputId": "178ca011-b059-4dec-8c68-f8d032e07f2c"
       },
-      "execution_count": 17,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -500,13 +494,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Z5YGJJKo9rov",
         "outputId": "c1cb5906-8833-418a-fd06-b11e28a8de52"
       },
-      "execution_count": 21,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -591,13 +584,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "K5UbAfA506Mm",
         "outputId": "952717e4-9c64-4c32-90db-24632d2265ce"
       },
-      "execution_count": 15,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -666,13 +658,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "Ll9VHeL5_lhw",
         "outputId": "7d561d10-496c-42c2-aab3-e309b8f25009"
       },
-      "execution_count": 22,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -743,13 +734,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "yjdW10dv5eS8",
         "outputId": "205bda13-5a5a-45a4-afc9-104bfe5cf7d3"
       },
-      "execution_count": 18,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -806,13 +796,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "NYlXLHCT7idG",
         "outputId": "2ea76406-233f-4928-866f-3e9a712c5561"
       },
-      "execution_count": 20,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -890,13 +879,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "3uoqYt-HCcG_",
         "outputId": "4252e71e-f10a-4259-c72e-35cb06ce9f2c"
       },
-      "execution_count": 23,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
@@ -925,13 +913,12 @@
       ],
       "metadata": {
         "colab": {
-          "base_uri": "https://localhost:8080/",
-          "height": 0
+          "base_uri": "https://localhost:8080/"
         },
         "id": "hRrwVHn0Ckgu",
         "outputId": "a5118fbe-4cc7-468d-e923-22787b247272"
       },
-      "execution_count": 24,
+      "execution_count": null,
       "outputs": [
         {
           "output_type": "stream",
